--- a/public/index.html
+++ b/public/index.html
@@ -27,12 +27,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <link href="/styles.css" rel="stylesheet" />
-    <script defer src="/main.js"></script>
+    <link href="./styles.css" rel="stylesheet" />
+    <script defer src="./main.js"></script>
   </head>
   <body>
     <main>
-      <div class="image"><img src="/pepecook.png" />$BRO is cookin</div>
+      <div class="image"><img src="./pepecook.png" />$BRO is cookin</div>
       <div class="content">
         <h1 class="rainbow rainbow_text_animated">$BRO</h1>
 
