--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         <section><b>50%</b> Presale : <b>50%</b> LP</section>
 
         <section>
-          BUY <b>$BRO SEND</b> <img src="sol.png" class="ico-sol" /> TO
+          BUY <b>$BRO</b> SEND <img src="sol.png" class="ico-sol" /> TO
           <section class="addy">
             <a
               class="addyText"
