Some seo and social shit + bundler

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>$BRO Coin</title>
+    <meta
+      name="description"
+      content="Memecoin on Solana: $BRO is cooking something..."
+    />
+    <link rel="icon" href="./images/icon.png" />
+
+    <!-- OpenGraph Meta Tags for social media -->
+    <meta property="og:title" content="$BRO Coin" />
+    <meta
+      property="og:description"
+      content="$BRO is cooking something..."
+    />
+    <meta property="og:url" content="https://justbro.xyz" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://justbro.xyz/pepeog.png"
+    />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="$BRO Coin" />
+    <meta
+      name="twitter:description"
+      content="Memecoin on Solana: $BRO is cooking something..."
+    />
+    <meta
+      name="twitter:image"
+      content="https://justbro.xyz/pepeog.png"
+    />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <meta name="robots" content="index, follow" />
     <link
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css"
       rel="stylesheet"
@@ -32,7 +66,12 @@
   </head>
   <body>
     <main>
-      <div class="image"><img src="./pepecook.png" />$BRO is cookin</div>
+      <div class="image">
+        <img
+          src="./images/pepecook.png"
+          alt="Pepe frog cooking something"
+        />$BRO is cookin
+      </div>
       <div class="content">
         <h1 class="rainbow rainbow_text_animated">$BRO</h1>
 
@@ -41,12 +80,14 @@
         </section>
 
         <section>
-          Min: <b>0.25</b>/Max: <b>10</b> <img src="sol.png" class="ico-sol" />
+          Min: <b>0.25</b>/Max: <b>10</b>
+          <img src="./images/sol.png" class="ico-sol" />
         </section>
         <section><b>50%</b> Presale : <b>50%</b> LP</section>
 
         <section>
-          BUY <b>$BRO</b> SEND <img src="sol.png" class="ico-sol" /> TO
+          BUY <b>$BRO</b> SEND
+          <img src="./images/sol.png" class="ico-sol" alt="$SOL" /> TO
           <section class="addy">
             <a
               class="addyText"
