webpack, optimizations, etc

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
               href="https://explorer.solana.com/address/ABY5ninccQKJJG9t3mFkaL9QTvAuL3zBamkjn1uAnT7K"
               >ABY5ninccQKJJG9t3mFkaL9QTvAuL3zBamkjn1uAnT7K</a
             >
-            <button><i class="fa-solid fa-copy"></i></button>
+            <button id="copyButton"><i class="fa-solid fa-copy"></i></button>
           </section>
         </section>
         <section class="trade">
