--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
         <h1 class="rainbow rainbow_text_animated">$BRO</h1>
 
         <section class="description">
-          <b>Chef memecoin</b> to understand flavors and cooking techniques.
+          <b>Chef memecoin</b> to understand flavours and cooking techniques.
         </section>
 
         <section>
